--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - 'v*'
+  # Enables the "Run workflow" button in GitHub Actions for testing
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -21,19 +23,19 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            artifact_name: beanal-linux.tar.gz  # Changed to .tar.gz
+            suffix: linux.tar.gz
             use_cross: false
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            artifact_name: beanal-windows.exe
+            suffix: windows.exe
             use_cross: false
           - os: macos-latest
             target: x86_64-apple-darwin
-            artifact_name: beanal-macos-intel.zip # Changed to .zip
+            suffix: macos-intel.zip
             use_cross: false
           - os: macos-latest
             target: aarch64-apple-darwin
-            artifact_name: beanal-macos-silicon.zip # Changed to .zip
+            suffix: macos-silicon.zip
             use_cross: false
 
     steps:
@@ -60,13 +62,13 @@ jobs:
       # =========================================
 
       # --- Define the Versioned Name ---
-      # e.g., "beanal-v1.2.0-windows.exe"
+      # Uses the tag name (e.g., v1.0.0) or branch name (e.g., main)
       - name: Generate Asset Name
         shell: bash
         run: echo "ASSET_NAME=beanal-${{ github.ref_name }}-${{ matrix.suffix }}" >> $GITHUB_ENV
 
       # --- Windows Packaging ---
-      # Rename the raw exe to the versioned name
+      # Just copy the exe (Icon is already embedded by build.rs)
       - name: Package Windows
         if: runner.os == 'Windows'
         shell: bash
@@ -74,16 +76,17 @@ jobs:
           cp "target/${{ matrix.target }}/release/beanal.exe" "${{ env.ASSET_NAME }}"
 
       # --- Linux Packaging ---
-      # 1. Create static folder (beanal-dist)
-      # 2. Tar it up into the Versioned Filename
+      # Bundle binary, icon, and install script
       - name: Package Linux
         if: runner.os == 'Linux'
         run: |
           mkdir beanal-dist
           cp "target/${{ matrix.target }}/release/beanal" beanal-dist/
           cp assets/icon.png beanal-dist/
-          cp install.sh beanal-dist/   # <--- Add this!
+          # Ensure install.sh exists in your repo root before running this!
+          cp install.sh beanal-dist/
           
+          # Create a desktop shortcut for the bundle
           echo "[Desktop Entry]
           Type=Application
           Name=BeAnal
@@ -91,14 +94,16 @@ jobs:
           Icon=./icon.png
           Terminal=false" > beanal-dist/beanal.desktop
           
+          # Permissions
           chmod +x beanal-dist/beanal
+          chmod +x beanal-dist/install.sh
           chmod +x beanal-dist/beanal.desktop
           
+          # Compress
           tar -czvf "${{ env.ASSET_NAME }}" beanal-dist
 
       # --- macOS Packaging ---
-      # 1. Create static App Bundle (BeAnal.app)
-      # 2. Zip it into the Versioned Filename
+      # Create .app Bundle structure
       - name: Package macOS
         if: runner.os == 'macOS'
         run: |
@@ -132,10 +137,21 @@ jobs:
           
           chmod +x "$APP_NAME.app/Contents/MacOS/$APP_NAME"
           
-          # Zip the app into the versioned asset name
+          # Zip the app
           zip -r "${{ env.ASSET_NAME }}" "$APP_NAME.app"
 
-      # --- Upload ---
+      # --- UPLOAD FOR TESTING ---
+      # This allows you to download the files from the "Actions" tab
+      # even if you didn't push a tag.
+      - name: Upload Artifact for Testing
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.ASSET_NAME }}
+          path: ${{ env.ASSET_NAME }}
+          if-no-files-found: error
+
+      # --- UPLOAD TO RELEASE ---
+      # Only runs when you push a tag like 'v1.0.0'
       - name: Upload to Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
