feat: add Ghost mode for see-thru operation, case study

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
   build-release:
     name: Build ${{ matrix.target }}
     runs-on: ${{ matrix.os }}
+    env:
+      ASSET_NAME: ""  # Placeholder to silence VSCode warnings
     strategy:
       fail-fast: false
       matrix:
