--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,6 @@ time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
 # Icon Generation
 image = {version = "0.24", default-features = false, features = ["png"] }
 
-
 # GUI framework
 eframe = "0.29"
 egui = "0.29"
@@ -37,7 +36,35 @@ crossbeam-channel = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
+# == Media Integration ==
+# Windows: Uses the official Microsoft crate
+[target.'cfg(target_os = "windows")'.dependencies]
+windows = { version = "0.52", features = [
+    "Foundation_Collections",
+    "Media_Control",
+    "Storage_Streams",
+] }
+tokio = { version = "1.0", features = ["full"] }
+
+# Linux: Uses the MPRIS standard via D-Bus
+[target.'cfg(target_os = "linux")'.dependencies]
+mpris = "2.0"
+
+# macOS: Uses private MediaRemote framework bindings
+[target.'cfg(target_os = "macos")'.dependencies]
+mediaremote-rs = "0.1"
+
 [profile.release]
 opt-level = 3
 lto = true
 codegen-units = 1
+
+# Explicitly declare the test harness binary
+[[bin]]
+name = "media_test"
+path = "src/bin/media_test.rs"
+
+# Explicitly declare the main binary (BeAnal)
+[[bin]]
+name = "beanal"
+path = "src/main.rs"
