--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,10 @@
-name: CI
+name: Rust CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -12,21 +12,37 @@ env:
 jobs:
   build:
     name: Build & Test
-    runs-on: ubuntu-latest  # Linux builds are fastest/cheapest for a quick check
-    
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        # We test on all three major OSes to ensure cross-platform compatibility
+        os: [ubuntu-latest, windows-latest, macos-latest]
+
     steps:
     - uses: actions/checkout@v4
-    
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
-      
-    - name: Install Linux Deps
+
+    # === COMBINED LINUX DEPENDENCIES ===
+    # Merges your original GUI deps (udev, wayland, xkb) 
+    # with the new Media deps (dbus, pkg-config)
+    - name: Install Linux Dependencies
+      if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libasound2-dev libudev-dev libwayland-dev libxkbcommon-dev
+        sudo apt-get install -y libasound2-dev libudev-dev libwayland-dev libxkbcommon-dev libdbus-1-dev pkg-config
 
-    - name: Check
-      run: cargo check --verbose
+    # Cache cargo registry and build artifacts to speed up future runs
+    - name: Cache Cargo registry
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cargo/registry
+          ~/.cargo/git
+          target
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-    - name: Test
+    - name: Build
+      run: cargo build --verbose
+
+    - name: Run tests
       run: cargo test --verbose
