feat(media): Implement cross-platform 'Now Playing' support
- Implemented media metadata fetching for Windows, Linux, and macOS.
- Windows: Uses native MediaTransportControls via the `windows` crate.
- Linux: Uses `mpris` via D-Bus for player detection and metadata.
- macOS: Uses JXA (AppleScript) for robust metadata reading without private APIs.
- Added `media_test` CLI tool for isolated testing of media features.
- Fixed CI pipeline by adding necessary Linux dependencies (dbus, alsa).
- Note: macOS implementation is currently read-only (no playback control) for stability.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ mpris = "2.0"
 # macOS: Uses private MediaRemote framework bindings
 [target.'cfg(target_os = "macos")'.dependencies]
 mediaremote-rs = "0.1"
+base64 = "0.22"
 
 [profile.release]
 opt-level = 3
