--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tracing = "0.1"
 tracing-subscriber = {version = "0.3", features = ["time", "env-filter"] }
 tracing-appender = "0.2"
 time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
+libc = "0.2"
 
 # Icon Generation
 image = {version = "0.24", default-features = false, features = ["png"] }
