--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ windows = { version = "0.52", features = [
     "Media_Control",
     "Storage_Streams",
 ] }
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.0", default-features = false, features = ["rt", "time", "sync"] }
 
 # Linux: Uses the MPRIS standard via D-Bus
 [target.'cfg(target_os = "linux")'.dependencies]
@@ -59,6 +59,11 @@ base64 = "0.22"
 opt-level = 3
 lto = true
 codegen-units = 1
+# Space saving options
+# Strip = true removes symbol information during a crash
+strip = true
+# panic = "abort" reduces binary size by disabling unwinding
+panic = "abort"
 
 # Explicitly declare the test harness binary
 [[bin]]
