--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ ureq = "2.9"
 [target.'cfg(target_os = "macos")'.dependencies]
 mediaremote-rs = "0.1"
 base64 = "0.22"
+ureq = "2.9"
 
 [profile.release]
 opt-level = 3
