--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # == Media Integration ==
+ureq = "2.9"
+
 # Windows: Uses the official Microsoft crate
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.52", features = [
